--- a/src/shopperior-ng/package.json
+++ b/src/shopperior-ng/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~13.1.1",
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
+    "bootstrap": "^5.1.3",
     "oidc-client": "^1.10.1",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
