--- a/.gitignore
+++ b/.gitignore
@@ -371,7 +371,7 @@ FodyWeavers.xsd
 /bazel-out
 
 # dependencies
-/node_modules
+**/node_modules
 
 # profiling files
 chrome-profiler-events*.json
@@ -394,8 +394,8 @@ chrome-profiler-events*.json
 .history/*
 
 # misc
-/.angular/cache
-/.sass-cache
+**/.angular/cache
+**/.sass-cache
 /connect.lock
 /coverage
 /libpeerconnection.log
