Added get all lists endpoint

--- a/src/Shopperior.Api/Shopperior.WebApi/Shopperior.WebApi.csproj
+++ b/src/Shopperior.Api/Shopperior.WebApi/Shopperior.WebApi.csproj
@@ -7,7 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.ApiEndpoints" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shopperior.Application.DependencyInjection.Microsoft\Shopperior.Application.DependencyInjection.Microsoft.csproj" />
+    <ProjectReference Include="..\Shopperior.Application\Shopperior.Application.csproj" />
+    <ProjectReference Include="..\Shopperior.Data.EFCore.DependencyInjection.Microsoft\Shopperior.Data.EFCore.DependencyInjection.Microsoft.csproj" />
+    <ProjectReference Include="..\Shopperior.Data.EFCore\Shopperior.Data.EFCore.csproj" />
+    <ProjectReference Include="..\StratmanMedia.Exceptions\StratmanMedia.Exceptions.csproj" />
+    <ProjectReference Include="..\StratmanMedia.ResponseObjects\StratmanMedia.ResponseObjects.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Shared\Endpoints\" />
+    <Folder Include="ShoppingLists\Models\" />
+    <Folder Include="ShoppingLists\Endpoints\" />
   </ItemGroup>
 
 </Project>
