--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ShopperiorContext": "" 
+    "ShopperiorDb": "Server=(local);Initial Catalog=Shopperior;Integrated Security=True;"
   }
 }
