--- a/src/Shopperior.Api/Shopperior.Application/Shopperior.Application.csproj
+++ b/src/Shopperior.Api/Shopperior.Application/Shopperior.Application.csproj
@@ -13,18 +13,17 @@
   <ItemGroup>
     <Folder Include="Items\" />
     <Folder Include="ListItems\" />
-    <Folder Include="ShoppingLists\" />
+    <Folder Include="ShoppingLists\Queries\" />
     <Folder Include="Stores\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.GuardClauses" Version="3.2.0" />
+    <PackageReference Include="Ardalis.GuardClauses" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Shopperior.Domain.Contracts\Shopperior.Domain.Contracts.csproj" />
     <ProjectReference Include="..\Shopperior.Domain\Shopperior.Domain.csproj" />
-    <ProjectReference Include="..\Shopperior.Logging\Shopperior.Logging.csproj" />
     <ProjectReference Include="..\StratmanMedia.Repositories.EFCore\StratmanMedia.Repositories.EFCore.csproj" />
     <ProjectReference Include="..\StratmanMedia.ResponseObjects\StratmanMedia.ResponseObjects.csproj" />
   </ItemGroup>
