--- a/src/Shopperior.Api/StratmanMedia.Exceptions/StratmanMedia.Exceptions.csproj
+++ b/src/Shopperior.Api/StratmanMedia.Exceptions/StratmanMedia.Exceptions.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
-    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.6.1" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
