--- a/src/shopperior-ng/package.json
+++ b/src/shopperior-ng/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~13.1.1",
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
+    "angularx-social-login": "^4.0.1",
     "bootstrap": "^5.1.3",
     "oidc-client": "^1.10.1",
     "rxjs": "^6.6.3",
@@ -30,7 +31,7 @@
     "zone.js": "^0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.1.2",
+    "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "^13.1.2",
     "@angular/compiler-cli": "~13.1.1",
     "@angular/language-service": "~13.1.1",
