Created post user endpoint

--- a/src/Shopperior.Api/Shopperior.WebApi/Shopperior.WebApi.csproj
+++ b/src/Shopperior.Api/Shopperior.WebApi/Shopperior.WebApi.csproj
@@ -28,6 +28,8 @@
     <Folder Include="Shared\Endpoints\" />
     <Folder Include="ShoppingLists\Models\" />
     <Folder Include="ShoppingLists\Endpoints\" />
+    <Folder Include="Users\Endpoints\" />
+    <Folder Include="Users\Models\" />
   </ItemGroup>
 
 </Project>
