--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "ShopperiorDb": "Server=(local);Initial Catalog=Shopperior;Integrated Security=True;"
-  }
+  },
+  "OIDC": {
+    "Authority": "__IDENTITY_AUTHORITY__",
+    "Audience": "__IDENTITY_AUDIENCE__"
+  } 
 }
