--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OIDC": {
+    "Authority": "__IDENTITY_AUTHORITY__",
+    "Audience": "__IDENTITY_AUDIENCE__",
+    "Scopes": [ "shop.api.access" ]
+  }
 }
