--- a/src/shopperior-ng/package.json
+++ b/src/shopperior-ng/package.json
@@ -23,9 +23,8 @@
     "@angular/platform-browser": "~13.1.1",
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
-    "angularx-social-login": "^4.0.1",
+    "@auth0/auth0-angular": "^1.8.2",
     "bootstrap": "^5.1.3",
-    "oidc-client": "^1.10.1",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.11.3"
