--- a/src/Shopperior.Api/Shopperior.Domain/Shopperior.Domain.csproj
+++ b/src/Shopperior.Api/Shopperior.Domain/Shopperior.Domain.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
