--- a/src/Shopperior.Api/Shopperior.Domain.Contracts/Shopperior.Domain.Contracts.csproj
+++ b/src/Shopperior.Api/Shopperior.Domain.Contracts/Shopperior.Domain.Contracts.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-	  <ImplicitUsings>enable</ImplicitUsings>
+	<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <Folder Include="Shared\Cqrs\" />
+    <Folder Include="ShoppingLists\Commands\" />
+    <Folder Include="ShoppingLists\Models\" />
     <Folder Include="ShoppingLists\Queries\" />
   </ItemGroup>
 
