Added create list item endpoint

--- a/src/Shopperior.Api/Shopperior.Domain.Contracts/Shopperior.Domain.Contracts.csproj
+++ b/src/Shopperior.Api/Shopperior.Domain.Contracts/Shopperior.Domain.Contracts.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ListItems\Commands\" />
+    <Folder Include="ListItems\Models\" />
+    <Folder Include="ListItems\Resolvers\" />
     <Folder Include="Shared\Cqrs\" />
     <Folder Include="ShoppingLists\Commands\" />
     <Folder Include="ShoppingLists\Models\" />
