--- a/src/Shopperior.Api/Shopperior.Application/Shopperior.Application.csproj
+++ b/src/Shopperior.Api/Shopperior.Application/Shopperior.Application.csproj
@@ -13,7 +13,10 @@
 
   <ItemGroup>
     <Folder Include="Items\" />
-    <Folder Include="ListItems\" />
+    <Folder Include="ListItems\Commands\" />
+    <Folder Include="ListItems\Models\" />
+    <Folder Include="ListItems\Resolvers\" />
+    <Folder Include="Shared\Models\" />
     <Folder Include="ShoppingLists\Commands\" />
     <Folder Include="ShoppingLists\Models\" />
     <Folder Include="ShoppingLists\Queries\" />
