--- a/src/Shopperior.Api/Shopperior.Application/Shopperior.Application.csproj
+++ b/src/Shopperior.Api/Shopperior.Application/Shopperior.Application.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Items\" />
     <Folder Include="ListItems\Commands\" />
     <Folder Include="ListItems\Models\" />
+    <Folder Include="ListItems\Queries\" />
     <Folder Include="ListItems\Resolvers\" />
     <Folder Include="Shared\Models\" />
     <Folder Include="ShoppingLists\Commands\" />
