Refactored and added tests for CurrentUserResolver

--- a/src/Shopperior.Api/Shopperior.WebApi.Tests/Shopperior.WebApi.Tests.csproj
+++ b/src/Shopperior.Api/Shopperior.WebApi.Tests/Shopperior.WebApi.Tests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Shared\Services\" />
     <Folder Include="Users\Endpoints\" />
   </ItemGroup>
 
