Refactored and created tests for DeleteShoppingListEndpoint

--- a/src/Shopperior.Api/Shopperior.WebApi.Tests/Shopperior.WebApi.Tests.csproj
+++ b/src/Shopperior.Api/Shopperior.WebApi.Tests/Shopperior.WebApi.Tests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Shared\Services\" />
+    <Folder Include="ShoppingLists\Endpoints\" />
     <Folder Include="Users\Endpoints\" />
   </ItemGroup>
 
