--- a/src/Shopperior.Api/Shopperior.WebApi/Shopperior.WebApi.csproj
+++ b/src/Shopperior.Api/Shopperior.WebApi/Shopperior.WebApi.csproj
@@ -32,6 +32,7 @@
     <Folder Include="Shared\Endpoints\" />
     <Folder Include="Shared\Extensions\" />
     <Folder Include="Shared\Middleware\" />
+    <Folder Include="Shared\Models\" />
     <Folder Include="ShoppingLists\Models\" />
     <Folder Include="ShoppingLists\Endpoints\" />
     <Folder Include="ShoppingLists\Resolvers\" />
