--- a/src/Shopperior.Api/Shopperior.WebApi/Shopperior.WebApi.csproj
+++ b/src/Shopperior.Api/Shopperior.WebApi/Shopperior.WebApi.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
