Configured Serilog for logging

--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
@@ -1,9 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "FilePath": "C:\\logs\\Shopperior.Api\\ShopperiorAPI.log"
   },
   "ConnectionStrings": {
     "ShopperiorDb": "Server=(local);Initial Catalog=Shopperior;Integrated Security=True;"
