--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
@@ -1,9 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "__DEFAULT_LOG_LEVEL__",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "FilePath": "__LOGGING_FILE_PATH__" 
   },
   "AllowedHosts": "*",
   "OIDC": {
