--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
@@ -1,10 +1,29 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "__DEFAULT_LOG_LEVEL__",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "FilePath": "__LOGGING_FILE_PATH__" 
+    }
+  },
+  "Serilog": {
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Loggly"
+      }
+    ],
+    "Loggly": {
+      "ApplicationName": "Shopperior API",
+      "EndpointPort": "443",
+      "IsEnabled": "true",
+      "ThrowExceptions": "true",
+      "LogTransport": "Https",
+      "EndpointHostname": "logs-01.loggly.com",
+      "CustomerToken": "__TOKEN__"
+    }
   },
   "AllowedHosts": "*",
   "OIDC": {
