--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ShopperiorDb": "__SHOPPERIOR_DB_CONN_STRING__"
+  },
   "Serilog": {
     "MinimumLevel": "Debug",
     "WriteTo": [
