Fixed Serilog logger

--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
@@ -9,7 +9,7 @@
     "ShopperiorDb": "__SHOPPERIOR_DB_CONN_STRING__"
   },
   "Serilog": {
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Information",
     "WriteTo": [
       {
         "Name": "Console"
