--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "ConnectionStrings": {
     "ShopperiorDb": "Server=(local);Initial Catalog=Shopperior;Integrated Security=True;"
   },
@@ -12,7 +6,7 @@
     "MinimumLevel": "Debug",
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Debug"
       },
       {
         "Name": "RollingFile",
