Added back console logging

--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
@@ -6,6 +6,9 @@
     "MinimumLevel": "Information",
     "WriteTo": [
       {
+        "Name": "Console"
+      },
+      {
         "Name": "Loggly"
       }
     ],
