Added logging to Canary endpoint. Added allowed CORS origins.

--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "ShopperiorDb": "__SHOPPERIOR_DB_CONN_STRING__"
   },
+  "AllowedOrigins": "__ALLOWED_ORIGINS__",
   "Serilog": {
     "MinimumLevel": "Information",
     "WriteTo": [
@@ -22,7 +23,6 @@
       "CustomerToken": "__TOKEN__"
     }
   },
-  "AllowedHosts": "*",
   "OIDC": {
     "Authority": "__IDENTITY_AUTHORITY__",
     "Audience": "__IDENTITY_AUDIENCE__",
