--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "ShopperiorDb": "Server=(local);Initial Catalog=Shopperior;Integrated Security=True;"
   },
+  "AllowedOrigins": "http://localhost:4200",
   "Serilog": {
     "MinimumLevel": "Debug",
     "WriteTo": [
