More changes to logging

--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.json
@@ -10,18 +10,13 @@
         "Name": "Console"
       },
       {
-        "Name": "Loggly"
+        "Name": "Loggly",
+        "Args": {
+          "CustomerToken": "__LOGGLY_TOKEN__",
+          "Tags": "Host-PROD"
+        }
       }
-    ],
-    "Loggly": {
-      "ApplicationName": "Shopperior API",
-      "EndpointPort": "443",
-      "IsEnabled": "true",
-      "ThrowExceptions": "true",
-      "LogTransport": "Https",
-      "EndpointHostname": "logs-01.loggly.com",
-      "CustomerToken": "__TOKEN__"
-    }
+    ]
   },
   "OIDC": {
     "Authority": "__IDENTITY_AUTHORITY__",
