Added endpoint to get categories for current user

--- a/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
+++ b/src/Shopperior.Api/Shopperior.WebApi/appsettings.Development.json
@@ -4,15 +4,16 @@
   },
   "AllowedOrigins": "http://localhost:4200",
   "Serilog": {
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Information",
     "WriteTo": [
       {
-        "Name": "Debug"
+        "Name": "Console"
       },
       {
-        "Name": "RollingFile",
+        "Name": "Loggly",
         "Args": {
-          "pathFormat": "C:\\logs\\Shopperior.Api\\ShopperiorAPI-{Date}.log"
+          "CustomerToken": "84d3c490-ed07-42e6-bfdd-291fdef46fac",
+          "Tags": "Host-LOCAL"
         }
       }
     ]
