--- a/src/shopperior-ng/package.json
+++ b/src/shopperior-ng/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build --prod && http-server -p 8080 -c-1 dist/shopperior-ng",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "~13.2.5",
     "@angular/platform-browser-dynamic": "~13.2.5",
     "@angular/router": "~13.2.5",
+    "@angular/service-worker": "~13.2.5",
     "@auth0/auth0-angular": "^1.8.2",
     "bootstrap": "^5.1.3",
+    "http-server": "^14.1.0",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.11.3"
