Change to prod build script

--- a/src/shopperior-ng/package.json
+++ b/src/shopperior-ng/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ngcc",
-    "build-prd": "ng build --configuration=production --optimization=true"
+    "build-prd": "ng build --prod"
   },
   "private": true,
   "dependencies": {
