--- a/src/shopperior-ng/package.json
+++ b/src/shopperior-ng/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng build --prod && http-server -p 8080 -c-1 dist/shopperior-ng",
+    "start": "ng build --configuration production && http-server -p 8080 -c-1 dist/shopperior-ng",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ngcc",
-    "build-prd": "ng build --prod"
+    "build-prd": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
